tests/ui/never_type/fallback_change/fallback-closure-ret.e2024.stderr
error[E0277]: the trait bound `!: Bar` is not satisfied
  --> $DIR/fallback-closure-ret.rs:22:5
   |
LL |     foo(|| panic!());
   |     ^^^^^^^^^^^^^^^^ the trait `Bar` is not implemented for `!`
   |
help: the following other types implement trait `Bar`
  --> $DIR/fallback-closure-ret.rs:15:1
   |
LL | impl Bar for () {}
   | ^^^^^^^^^^^^^^^ `()`
LL | impl Bar for u32 {}
   | ^^^^^^^^^^^^^^^^ `u32`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #148922 <https://github.com/rust-lang/rust/issues/148922> for more information)
   = help: you might have intended to use the type `()` here instead
note: required by a bound in `foo`
  --> $DIR/fallback-closure-ret.rs:18:11
   |
LL | fn foo<R: Bar>(_: impl Fn() -> R) {}
   |           ^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
